--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 # Server Port
 server.port=8080
 
+# Enable actuators
+management.endpoints.web.exposure.include=*
+
+# log file
+logging.file.name=logs/spring-boot-app.log
+
 
